<resources>
    <string name="app_name">IMATA</string>
    <string name="enter_the_customer_id">Enter the Customer ID</string>
    <string name="amount">Amount</string>
    <string name="add">Add</string>
    <string name="_1">1</string>
    <string name="customer_1">Customer 1</string>
    <string name="date">16/6/2021</string>
    <string name="update">Update</string>
    <string name="update_new">Update</string>
    <string name="delete">Delete</string>
    <string name="sync_all">Sync All</string>
    <string name="delete_all">Delete All</string>
    <string name="no_data">No Data.</string>
    <string name="email_address">Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
</resources>